Adding text to home page.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
 	<h1>Welcome to Our Sample Page</h1>
 	<p>This sample page is publicly available.</p>
+	<p>This is just some more text.</p>
 </body>
 </html>
